infra-code-manifests/pgadmin/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin-route
  namespace: postgresql
spec:
  parentRefs:
  - name: greencap-gateway
    namespace: default
    sectionName: web
  hostnames:
  - "pgadmin.greencap"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: pgadmin-pgadmin4
      port: 80
